# glassbox.cpp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
include/glassbox/: attention.h  embed.h  layernorm.h  model.h  token.h  utils.h
src/: CMakeLists.txt  attention.cpp  embed.cpp  layernorm.cpp  model.cpp  token.cpp  utils.cpp
tests/: CMakeLists.txt  test_token.cpp  token_test_data.h
tools/: gen_token_reference.py
